changed .env file

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-mongodburl='mongodb://localhost:27017/artgallery'
+mongodburl='mongodb+srv://admin:admin@cluster0.wahxsuz.mongodb.net/demoproject32?retryWrites=true&w=majority'
 PORT=2563
