Connected to MongoDB Atlas URL

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-mongodburl='mongodb+srv://admin:admin@cluster0.wahxsuz.mongodb.net/demoproject32?retryWrites=true&w=majority'
+mongodburl='mongodb+srv://admin:admin@cluster0.wahxsuz.mongodb.net/artgallery?retryWrites=true&w=majority'
 PORT=2563
